--- a/locations.html
+++ b/locations.html
@@ -113,13 +113,7 @@
               </div>
             </section>
           
-            <script>
-              const mobileMenu = document.getElementById('mobile-menu');
-              const menu = document.querySelector('.navbar__menu');
-              mobileMenu.addEventListener('click', () => {
-                mobileMenu.classList.toggle('is-active');
-                menu.classList.toggle('active');
-              });
-            </script>
+          
+            <script src="app.js"></script>
           </body>
           </html>
