--- a/locations.html
+++ b/locations.html
@@ -3,8 +3,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Where To Eat – Locations</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="./styles.css" />
+  
 </head>
 <body>
   <nav class="navbar">
@@ -114,6 +114,6 @@
             </section>
           
           
-            <script src="app.js"></script>
+            <script src="./app.js"></script>
           </body>
           </html>
