Zmiany kolejne do 1.0

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li class="navbar__btn">
-                <a href="/" class="button">
+                <a href="contact.html" class="button">
                     Contact Us
                 </a>
             </li>
@@ -92,16 +92,11 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="section">
+<section id="contact" class="section">
     <div class="section__content">
       <h2>Contact Us</h2>
-      <p>Have a place to recommend? Message us!</p>
-      <form class="contact__form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit" class="button">Send</button>
-      </form>
+      <p>Have a place to recommend? Click below to contact us!</p>
+      <a href="contact.html" class="button" style="margin-top: 20px; display: inline-block;">Go to Contact Form</a>
     </div>
   </section>
 
