--- a/locations.html
+++ b/locations.html
@@ -16,10 +16,14 @@
         <span class="bar"></span>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__item"><a href="index.html" class="navbar__links">Home</a></li>
-        <li class="navbar__item"><a href="locations.html" class="navbar__links">Locations</a></li>
-        <li class="navbar__item"><a href="index.html#categories" class="navbar__links">Categories</a></li>
-        <li class="navbar__btn"><a href="index.html#contact" class="button">Contact Us</a></li>
+        <li class="navbar__item">
+            <a href="index.html" class="navbar__links">Home</a></li>
+        <li class="navbar__item">
+            <a href="locations.html" class="navbar__links">Locations</a></li>
+        <li class="navbar__item">
+            <a href="index.html#categories" class="navbar__links">Categories</a></li>
+        <li class="navbar__btn">
+            <a href="contact.html" class="button">Contact Us</a></li>
       </ul>
     </div>
   </nav>
