--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,15 @@
     <div class="section__content">
       <h2>Contact Us</h2>
       <p>Have a place to recommend? Message us!</p>
-      <form class="contact__form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit" class="button">Send</button>
-      </form>
+        <form class="contact__form" action="https://formsubmit.co/maciej.jaki28@gmail.com" method="POST">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            
+            <input type="hidden" name="_next" value="https://divineff.github.io/thanks.html">
+            
+            <button type="submit" class="button">Send</button>
+          </form>
     </div>
   </section>
 
