--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="section__content">
       <h2>Contact Us</h2>
       <p>Have a place to recommend? Click below to contact us!</p>
-      <a href="contact.html" class="button" style="margin-top: 20px; display: inline-block;">Go to Contact Form</a>
+      <a href="contact.html" class="contact__link">Go to Contact Form</a>
     </div>
   </section>
 
