--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="/" class="navbar__links">
+                <a href="index.html#categories" class="navbar__links">
                     Categories
                 </a>
             </li>
@@ -71,20 +71,26 @@
           <h3>Min's Table</h3>
           <p>Tasty and traditional Korean meals.</p>
         </div>
+        <div class="restaurant__card">
+            <h3>Manekin</h3>
+            <p>Pancakes!!!!</p>
+          </div>
+        <div style="text-align: center; margin-top: 40px;">
+            <a href="locations.html" class="locations__link">Looking for details or other place?</a>
+          </div>
       </div>
     </div>
   </section>
 
   <!-- Categories Section -->
-  <section id="categories" class="section">
+<section id="categories" class="section">
     <div class="section__content">
       <h2>Categories</h2>
       <div class="categories__grid">
-        <div class="category">Pizza</div>
-        <div class="category">Sushi</div>
-        <div class="category">Burgers</div>
-        <div class="category">Vegan</div>
-        <div class="category">Desserts</div>
+        <a href="categories/asian.html" class="category">Asian</a>
+        <a href="categories/sushi.html" class="category">Sushi</a>
+        <a href="categories/burgers.html" class="category">Burgers</a>
+        <a href="categories/desserts.html" class="category">Desserts</a>
       </div>
     </div>
   </section>
