--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <div class="section__content">
       <h2>Categories</h2>
       <div class="categories__grid">
-        <a href="categories/asian.html" class="category">Asian</a>
-        <a href="categories/sushi.html" class="category">Sushi</a>
-        <a href="categories/burgers.html" class="category">Burgers</a>
-        <a href="categories/desserts.html" class="category">Desserts</a>
+        <a href="categories/asian.html" class="category">ASIAN</a>
+        <a href="categories/sushi.html" class="category">SUSHI</a>
+        <a href="categories/burgers.html" class="category">BURGERS</a>
+        <a href="categories/desserts.html" class="category">DESSERTS</a>
       </div>
     </div>
   </section>
