--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>Pancakes!!!!</p>
           </div>
         <div style="text-align: center; margin-top: 40px;">
-            <a href="locations.html" class="locations__link">Looking for details or other place?</a>
+            <a href="locations.html" class="custom-link">Looking for details or other place?</a>
           </div>
       </div>
     </div>
