--- a/thanks.html
+++ b/thanks.html
@@ -44,7 +44,7 @@
       <div class="section__content">
         <h1>THANK YOU FOR CONTACTING US!</h1>
         <p>
-       We appreciate your involvemnt in creating and adding new places to our website, or correcting our mistakes. Once again thank you.
+       Thanks Byku for opinion!
         </p>
         <p>
           This site is updated regularly with our latest discoveries, so check back often to find your new favorite place to eat in Poznań!
