--- a/index.html
+++ b/index.html
@@ -38,18 +38,23 @@
     
     </div>
  </nav>
-
+<section id="intro" class="section clickable-intro" style="background: #ffe0b2; cursor: pointer;">
+  <div class="section__content">
+    <h1 style="color: #f77062;">Welcome to Where To Eat!</h1>
+    <p>Get ready to discover the best places to eat in Poznań.</p>
+    <p style="margin-top: 30px; font-size: 0.9rem; color: #888;">(Click anywhere to start exploring ↓)</p>
+  </div>
+</section>
   <!-- Home Section -->
   <section id="home" class="section">
     <div class="section__content">
-      <h1>Welcome to Where To Eat</h1>
+      <h1>About Us</h1>
       <p>
-        We are a group of food enthusiasts from Poznań who love to discover and recommend the best local restaurants, cafes, and eateries in our city.
-        Our mission is simple: help you explore the diverse culinary scene of Poznań with ease and excitement. Whether you're looking for traditional Polish dishes or modern fusion cuisine,
-        we provide honest reviews and personal picks based on real experience.
-      </p>
+        We are a group of food enthusiasts from Poznań who love to discover and recommend the best local restaurants, cafes, and eateries in our city. 
+        Our mission is simple: help you explore the diverse culinary scene of Poznań with ease and excitement. 
+        Whether you're looking for traditional Polish dishes or modern fusion cuisine, we provide reviews,based on real experience.
       <p>
-        This site is updated regularly with our latest discoveries, so check back often to find your new favorite place to eat in Poznań!
+        This site is updated regularly with our latest discoveries, so check often to find new favorite place to eat in Poznań!
       </p>
     </div>
   </section>
