--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     
     </div>
  </nav>
-<section id="intro" class="section clickable-intro" style="background: #ffe0b2; cursor: pointer;">
-  <div class="section__content">
+<section id="intro" class="clickable-intro">
+  <div class="intro__overlay">
     <h1 style="color: #f77062;">Welcome to Where To Eat!</h1>
     <p>Get ready to discover the best places to eat in Poznań.</p>
     <p style="margin-top: 30px; font-size: 0.9rem; color: #888;">(Click anywhere to start exploring ↓)</p>
