--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,9 @@
 <body>
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="index.html" id="navbar__logo">Where To Eat</a>
+     <a href="./index.html" id="navbar__logo">
+  <img src="./images/logo.jpg" alt="Logo" class="logo-img" />
+  <span class="logo-text">Where To Eat</span>
       <div class="navbar__toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
