--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
  <nav class="navbar">
     <div class="navbar__container">
-        <a href="/" id="navbar__logo">Where To Eat</a>
+       <a href="./index.html" id="navbar__logo">
+  <img src="./images/logo.jpg" alt="Logo" class="logo-img" />
+  <span class="logo-text">Where To Eat</span>
+</a>
         <div class="navbar__toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
