--- a/thanks.html
+++ b/thanks.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Where To Eat</title>
     <link rel="stylesheet" href="./styles.css" />
+      <link rel="icon" type="image/x-icon" href="images/logo.jpg">
   </head>
   <body>
    <nav class="navbar">
